kleinere Änderungen: auf dem Knoten-Knopf ''+" durch Guidance-Symbol ersetzt überflüssigen-Regler entfernt Datenquellen-Switch entfernt Navigate-menu entfernt n durch korrekte Zahl ersetzt

--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -21,7 +21,7 @@
     
     <a class="navbar-brand title" href="#">new/s/leak</a>
 
-    <md-input-container md-theme="control-theme">
+    <md-input-container md-theme="control-theme" style="visibility: hidden">
       <md-select ng-model="selectedDataset" ng-change="changeDataset()" aria-label="dataset">
         <md-option ng-repeat="data in datasets" ng-value="data" ng-selected="$index === 0">
           {{data}}
