Adapt settings and node expansion menu to small screens

--- a/public/partials/expandNode.html
+++ b/public/partials/expandNode.html
@@ -26,7 +26,7 @@
                 </md-button>
             </div>
         </md-toolbar>
-        <md-dialog-content>
+        <md-dialog-content style="overflow-y: hidden;">
                 <md-content layout-padding layout="column">
                     <div layout="row">
                         <md-input-container class="md-block" flex-gt-sm>
@@ -62,7 +62,7 @@
                         </md-virtual-repeat-container>
                     </md-list>
                     <md-divider></md-divider>
-                    <span>Number of neighbors: {{ neighbors.length }} (fixed selection)</span>
+                    <!--<span>Number of neighbors: {{ neighbors.length }} (fixed selection)</span>-->
                 </md-content>
         </md-dialog-content>
 
