Bugfixes + kleinere Änderungen: Bugfix für: Zu hinzugefügten Knoten lassen sich keine Informationen laden Bugfix für: Rückgängig machen von geänderter Kantentyppriorisierung führt zu falscher aktiven History Bugfix für:  Ändern von Kantentyppriorisierung über Kontextmenü führt zu falscher History (alter Guidance Punkt wird weiter angezeigt) Herzicons werden nun auch in der Matrix dargestellt "treated normally" wird nun weiß und nicht grau im Kontextmenü dargestellt

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -211,7 +211,7 @@ div.tooltip {
     width: 300px;
 }
 
-.material-icons.red { color: #ff0000; }
+.material-icons.white { color: #FFFFFF; }
 
 /*verhindert, dass Icons markiert werden*/
 .noselect {
