--- a/public/partials/tools.html
+++ b/public/partials/tools.html
@@ -59,7 +59,7 @@
             <i class="material-icons">{{x.img}}</i>
           </td>
           <td ng-repeat-end="y in categories" ng-if="!$first" id="{{xIndex}}.{{$index}}" ng-click="setUI(xIndex,$index)" class="uiTable" style="background-color: {{prioToColor()[UIitems()[xIndex-1][$index-1]]}}" title="Set weight for all edges connecting a {{x.singular}}-Entity with a {{y.singular}}-Entity">
-            <i class="material-icons red" id="{{xIndex}}.{{$index}}.icon" style="visibility:{{UIitems()[xIndex-1][$index-1]!=0?'hidden':'visible'}};">block</i>
+            <i class="material-icons white" id="{{xIndex}}.{{$index}}.icon" style="visibility:{{UIitems()[xIndex-1][$index-1]==1?'hidden':'visible'}};">{{prioToIcon()[UIitems()[xIndex-1][$index-1]]}}</i>
           </td>
         </tr>
       </table>
