--- a/public/partials/history.html
+++ b/public/partials/history.html
@@ -40,7 +40,7 @@
 		<h3 class="md-headline">No elements in history.</h3>
 	</div>
 
-	<md-content style="padding: 5px 0 0 0; background: white;" ng-hide="history.length == 0" layout="row">
+	<md-content style="padding: 5px 5px 0 5px; background: white;" ng-hide="history.length == 0" layout="row">
 		<p style="font-size:16px;"> History Tracker</p>
 		<div style="width: 210px;">
 			<md-button class="md-icon-button" aria-label="Reset">
@@ -56,7 +56,8 @@
 				Full history
 			</md-checkbox>
 		</div>
-		<md-virtual-repeat-container md-orient-horizontal style="max-width: 800px;height: 60px; width: 100%;">
+
+		<md-virtual-repeat-container md-orient-horizontal style="max-width: calc(100% - 40px); height: 60px; width: 100%; margin-right: 5px; background: #D3D3D3;">
 			<div class="rep-item md-whiteframe-z1" flex
 				 md-virtual-repeat="obj in history"
 				 ng-mouseleave="hidePopover(obj.id)"
