Add type information to merge functionality

--- a/public/partials/editNode.html
+++ b/public/partials/editNode.html
@@ -19,7 +19,7 @@
     <form>
         <md-toolbar>
             <div class="md-toolbar-tools">
-                <h2>Edit node {{ title }}</h2>
+                <h2>Edit node: {{ title }}</h2>
                 <span flex></span>
                 <md-button class="md-icon-button" ng-click="closeClick()">
                     <md-icon class="material-icons" aria-label="Close dialog">clear</md-icon>
