--- a/public/partials/settings.html
+++ b/public/partials/settings.html
@@ -54,16 +54,16 @@
                 <md-tab label="mergelist" md-on-select="isBlacklist = !isBlacklist">
                     <md-content class="md-padding">
                         <md-list>
-                            <md-list-item layout="row">
-                                <p class="md-body-2"> Origin</p>
-                                <p class="md-body-2"> Duplicates</p>
-                            </md-list-item>
+                            <md-list class="list-sub-head" layout="row">
+                                <md-subheader ng-style="{ width: '30%'}">Origin  </md-subheader>
+                                <md-subheader ng-style="{ width: '70%'}">Duplicates</md-subheader>
+                            </md-list>
 
                             <md-divider></md-divider>
                             <md-virtual-repeat-container style="height: 300px;">
                                 <md-list-item md-virtual-repeat="e in mergelist | orderBy: 'name'"  ng-click="toggle(e, mergelistSelection)">
-                                    <p> {{ e.origin.name }} </p>
-                                    <p> {{ joinDuplicates(e.duplicates) }} </p >
+                                    <p ng-style="{ width: '30%'}"> {{ e.origin.name }} ({{ e.origin.type }}) </p>
+                                    <p ng-style="{ width: '70%'}"> {{ joinDuplicates(e.duplicates) }} </p >
                                     <md-checkbox class="md-secondary" ng-click="toggle(e, mergelistSelection)" ng-checked="exists(e, mergelistSelection)" aria-label="remove-item"></md-checkbox>
                                 </md-list-item>
                             </md-virtual-repeat-container>
