--- a/public/partials/settings.html
+++ b/public/partials/settings.html
@@ -42,7 +42,7 @@
                                 <md-list-item layout="row" md-virtual-repeat="e in blacklist | orderBy: 'name'" ng-click="toggle(e, blacklistSelection)">
                                     <p ng-style="{ width: '10%'}"> {{ e.id }} </p>
                                     <p ng-style="{ width: '40%'}"> {{ e.name }} </p>
-                                    <p ng-style="{ width: '20%'}"> {{ e.type }} </p>
+                                    <p ng-style="{ width: '20%'}"> {{ e.entityType }} </p>
                                     <md-checkbox class="md-secondary" ng-style="{ width: '30%'}" ng-click="toggle(e, blacklistSelection)" ng-checked="exists(e, blacklistSelection)" aria-label="remove-item"></md-checkbox>
                                 </md-list-item>
                             </md-virtual-repeat-container>
@@ -62,7 +62,7 @@
                             <md-divider></md-divider>
                             <md-virtual-repeat-container style="height: 300px;">
                                 <md-list-item md-virtual-repeat="e in mergelist | orderBy: 'name'"  ng-click="toggle(e, mergelistSelection)">
-                                    <p ng-style="{ width: '30%'}"> {{ e.origin.name }} ({{ e.origin.type }}) </p>
+                                    <p ng-style="{ width: '30%'}"> {{ e.origin.name }} ({{ e.origin.entityType }}) </p>
                                     <p ng-style="{ width: '70%'}"> {{ joinDuplicates(e.duplicates) }} </p >
                                     <md-checkbox class="md-secondary" ng-click="toggle(e, mergelistSelection)" ng-checked="exists(e, mergelistSelection)" aria-label="remove-item"></md-checkbox>
                                 </md-list-item>
