Remove hard-coded NE labels from NetworkController.js

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -61,7 +61,7 @@
 
                 <main id="center-box" resizable r-directions="['right']" r-flex="true" flex="none">
                     <!-- selectedTab is defined in AppController -->
-                    <md-tabs md-selected="selectedTab.index" md-border-bottom md-autoselect layout-fill ngsf-fullscreen="FancyNetworkController">
+                    <md-tabs md-selected="selectedTab.index" md-border-bottom md-autoselect layout-fill ngsf-fullscreen="NetworkController">
 
                         <md-tab flex label="Network">
                             <div id="network" ui-view="network"></div>
