--- a/public/partials/network.html
+++ b/public/partials/network.html
@@ -17,25 +17,9 @@
 
 <md-toolbar>
     <div class="md-toolbar-tools" md-theme="control-theme" style="margin-top: 10px;">
-        <!-- TODO Generate in for loop -->
-        <md-input-container layout flex="10">
-            <label>#Per</label>
-            <input ng-model="numPer" ng-change="reloadGraph()" type="number" step="1" min="0" ng-model-options="{updateOn: 'default blur', debounce: {default: 300, blur: 0} }">
-        </md-input-container>
-
-        <md-input-container layout flex="10">
-            <label>#Org</label>
-            <input ng-model="numOrg" ng-change="reloadGraph()" type="number" step="1" min="0" ng-model-options="{updateOn: 'default blur', debounce: {default: 300, blur: 0} }">
-        </md-input-container>
-
-        <md-input-container layout flex="10">
-            <label>#Loc</label>
-            <input ng-model="numLoc" ng-change="reloadGraph()" type="number" step="1" min="0" ng-model-options="{updateOn: 'default blur', debounce: {default: 300, blur: 0} }">
-        </md-input-container>
-
-        <md-input-container layout flex="10">
-            <label>#Misc</label>
-            <input ng-model="numMisc" ng-change="reloadGraph()" type="number" step="1" min="0" ng-model-options="{updateOn: 'default blur', debounce: {default: 300, blur: 0} }">
+        <md-input-container layout flex="10" ng-repeat="t in types">
+            <label>#{{ t.name }}</label>
+            <input ng-model="t.sliderModel" ng-change="reloadGraph()" type="number" step="1" min="0" ng-model-options="{updateOn: 'default blur', debounce: {default: 300, blur: 0} }">
         </md-input-container>
 
         <div flex="20" layout layout-align="center center">
