--- a/public/partials/metadata.html
+++ b/public/partials/metadata.html
@@ -17,6 +17,9 @@
 
 <div id="metadata" style="padding: 10px 0 0 10px;">
     <p style="font-size:16px; display: inline-block">Frequency Overview</p>
+    <md-switch ng-model="reorder" aria-label="Ordering Mode" ng-change="initMetadataView()" style="display: inline-block; padding: 0 0 0 16px; margin: 0;">
+        Order by black bars
+    </md-switch>
     <md-tabs md-stretch-tabs="always" md-dynamic-height="true">
             <md-tab label="Entities" md-on-select="updateHeight()">
                 <div id="entities_tab" class="tab-pane fade in">
