icons for sava/load (save commented out)

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -564,6 +564,9 @@ footer > div #histogram {
 #history .md-virtual-repeat-container .md-virtual-repeat-scroller {
     overflow-x: scroll !important;
 }
+#history .md-button.md-icon-button {
+    margin: 0;
+}
 
 /*#history {
     margin-left: 10px;
