--- a/public/partials/history.html
+++ b/public/partials/history.html
@@ -34,7 +34,7 @@
 
 	<md-content id="history" style="padding: 5px 5px 0 5px; background: white;" layout="row">
 		<p style="font-size:16px;"> History Tracker</p>
-		<div style="width: 210px;">
+		<div style="width: 350px;">
 			<md-checkbox id="show-history" ng-model="showHistory" aria-label="Show-full-history">
 				<md-tooltip>
 					Show every interaction including remove events
@@ -47,6 +47,21 @@
 				</md-tooltip>
 				<md-icon ng-click="observer.reset()" id="reset-history" class="material-icons md-secondary md-hue-3" style="color: red">cancel</md-icon>
 			</md-button>
+			<md-button class="md-icon-button" aria-label="Save">
+				<md-tooltip>
+					Save State
+				</md-tooltip>
+				<md-icon ng-click="saveHistory()" id="save-history" class="material-icons md-secondary md-hue-3" style="color: red">file_download</md-icon>
+			</md-button>
+			<!--
+			<file-field class="md-icon-button md-button md-ink-ripple" ng-model="uploadFile" ng-click="loadHistory()" aria-label="Load">
+
+				<md-tooltip>
+					Load State
+				</md-tooltip>
+				<md-icon id="load-history" class="material-icons" style="color: red">file_upload</md-icon>
+			</file-field>
+			-->
 		</div>
 
 		<md-virtual-repeat-container md-orient-horizontal style="max-width: calc(100% - 40px); height: 60px; width: 100%; margin-right: 5px; background: #D3D3D3;">
