fixed reorder switch bug

--- a/public/partials/metadata.html
+++ b/public/partials/metadata.html
@@ -17,7 +17,7 @@
 
 <div id="metadata" style="padding: 10px 0 0 10px;">
     <p style="font-size:16px; display: inline-block">Frequency Overview</p>
-    <md-switch ng-model="reorder" aria-label="Ordering Mode" ng-change="initMetadataView()" style="display: inline-block; padding: 0 0 0 16px; margin: 0;">
+    <md-switch ng-model="reorder" aria-label="Ordering Mode" ng-change="resetMetadataView()" style="display: inline-block; padding: 0 0 0 16px; margin: 0;">
         Order by black bars
     </md-switch>
     <md-tabs md-stretch-tabs="always" md-dynamic-height="true">
