--- a/public/partials/metadata.html
+++ b/public/partials/metadata.html
@@ -21,32 +21,37 @@
         Order by black bars
     </md-switch>
     <md-tabs md-stretch-tabs="always" md-dynamic-height="true">
-            <md-tab label="Entities" md-on-select="updateHeight()">
-                <div id="entities_tab" class="tab-pane fade in">
-                <md-tabs>
-                    <md-tab
-                            ng-repeat="entityType in entityTypes"
-                            label="{{entityType}}">
-                        <div class="scroll-chart">
-                            <div id="chart_{{entityType| lowercase}}" class="meta-chart"></div>
-                        </div>
-                    </md-tab>
-                </md-tabs>
-                </div>
-
+            <md-tab md-on-select="updateHeight()">
+                <md-tab-label>
+                    <md-icon class-="material-icons">{{ historyFactory.getIcon('entity') }}</md-icon> Entity
+                </md-tab-label>
+                <md-tab-body>
+                    <div id="entities_tab" class="tab-pane fade in">
+                    <md-tabs>
+                        <md-tab ng-repeat="entityType in entityTypes" label="{{entityType}}">
+                            <div class="scroll-chart">
+                                <div id="chart_{{entityType| lowercase}}" class="meta-chart"></div>
+                            </div>
+                        </md-tab>
+                    </md-tabs>
+                    </div>
+                </md-tab-body>
             </md-tab>
-        <md-tab label="Metadata" md-on-select="updateHeight()">
-            <div id="metadata_tab" class="tab-pane fade in active">
-                <md-tabs>
-                    <md-tab
-                            ng-repeat="metaType in metadataTypes"
-                            label="{{metaType}}">
-                        <div class="scroll-chart">
-                            <div id="chart_{{metaType.replace('.','_') | lowercase}}" class="meta-chart"></div>
-                        </div>
-                    </md-tab>
-                </md-tabs>
-            </div>
+        <md-tab md-on-select="updateHeight()">
+            <md-tab-label>
+                <md-icon class-="material-icons">{{ historyFactory.getIcon('metadata') }}</md-icon> Metadata
+            </md-tab-label>
+            <md-tab-body>
+                <div id="metadata_tab" class="tab-pane fade in active">
+                    <md-tabs>
+                        <md-tab ng-repeat="metaType in metadataTypes" label="{{metaType}}">
+                            <div class="scroll-chart">
+                                <div id="chart_{{metaType.replace('.','_') | lowercase}}" class="meta-chart"></div>
+                            </div>
+                        </md-tab>
+                    </md-tabs>
+                </div>
+            </md-tab-body>
         </md-tab>
     </md-tabs>
 
